--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-python-telegram-bot==20.3
-openai==1.54.5
+python-telegram-bot==20.7
+openai==1.3.5
 flask==2.3.3
+pillow==10.0.1
+python-dotenv==1.0.0
