--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-python-telegram-bot==20.7
-openai==1.3.5
-flask==2.3.3
-pillow==9.5.0
-python-dotenv==1.0.0
+python-telegram-bot==20.6
+openai==1.2.3
+flask==2.3.2
+pillow==9.4.0
+python-dotenv==0.21.0
+setuptools==68.2.2
+wheel==0.41.2
