--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-python-telegram-bot==20.6
-openai==1.2.3
+python-telegram-bot==20.4
+openai==1.1.1
 flask==2.3.2
-pillow==9.4.0
+Pillow==9.3.0
 python-dotenv==0.21.0
-setuptools==68.2.2
-wheel==0.41.2
+setuptools==65.5.0
+pip==23.3.1
